--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .image {
     width: 100vw;
     height: 130vw;
-    background-image: url('Untitled_3x.png');
+    background-image: url('Untitled_3x.jpg');
     background-size: contain;
     background-repeat: no-repeat;
 
@@ -22,6 +22,13 @@ body {
     width: 100%;
     font-size: 25px;
     text-align: left;
+}
+ul {
+    margin-top: 20px;
+    padding-left: 20px;
+}
+li {
+    margin-bottom: 20px;
 }
 .secret_place {
     margin-top: 30px;
